xpmd: Add Xilinx pmd
Launch the driver framework.

TBD:
1. HW register mmap
2. rx/tx busrt functions
3. dev ops functions

Signed-off-by: Alex He <ahe@xilinx.com>

--- a/app/test-pmd/Makefile
+++ b/app/test-pmd/Makefile
@@ -64,6 +64,10 @@ ifeq ($(CONFIG_RTE_LIBRTE_PMD_SOFTNIC),y)
 LDLIBS += -lrte_pmd_softnic
 endif
 
+ifeq ($(CONFIG_RTE_LIBRTE_PMD_XLNX),y)
+LDLIBS += -lrte_pmd_xlnx
+endif
+
 endif
 
 CFLAGS_cmdline.o := -D_GNU_SOURCE
